# ultron

./: .gitmodules  LICENSE  README.md  example.cfg  stack.yaml  ultron.cabal
app/: Main.hs  Options.hs  Parse.hs
commands/: aww  whereami  whoami
examples/: cowsay
test/: ParseSpec.hs
