name:                ultron
version:             0.1.0.0
synopsis:            A Slack Bot for UNIX-style ChatOps
description:         Please see README.md
homepage:            http://github.com/joehillen/ultron#readme
license:             MIT
license-file:        LICENSE
author:              Joe Hillenbrand
maintainer:          joehillen@gmail.com
copyright:           2016 Joe Hillenbrand
category:            ChatOps
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ultron
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , slack-api
                     , lens
                     , text
                     , transformers
                     , directory
                     , process
                     , process-extras
                     , hsini
                     , optparse-applicative
                     , async
                     , filepath
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/joehillen/ultron
