name:                ultron
version:             0.1.0.0
synopsis:            A Slack Bot for UNIX-style ChatOps
description:         Please see README.md
homepage:            http://github.com/joehillen/ultron#readme
license:             MIT
license-file:        LICENSE
author:              Joe Hillenbrand
maintainer:          joehillen@gmail.com
copyright:           2016 Joe Hillenbrand
category:            ChatOps
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/joehillen/ultron

executable ultron
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
                     , Parse
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , slack-bot-async
                     , async
                     , directory
                     , filepath
                     , ini
                     , lens
                     , megaparsec
                     , monad-logger
                     , optparse-applicative
                     , process
                     , process-extras
                     , text
                     , transformers
  default-language:    Haskell2010

test-suite test
  hs-source-dirs: test
                , app
  main-is: Spec.hs
  other-modules:       ParseSpec
                     , Parse
  type: exitcode-stdio-1.0
  ghc-options:   -threaded
  build-depends: base
               , hspec >= 1.3
               , megaparsec
               , text
               , heredoc
  ghc-options: -Wall -Werror
  default-language:    Haskell2010
